--- a/css/topo.css
+++ b/css/topo.css
@@ -26,7 +26,7 @@
   margin-left: 0;
   margin-bottom: 5px;
   border: 1px solid #cccccc;
-  border-radius: 9px;
+  border-radius: 6px;
   -o-border-radius: 9px;
   -icab-border-radius: 9px;
   -khtml-border-radius: 9px;
@@ -36,17 +36,13 @@
 }
 .tooltipoverlay
 {
+  color: #666666;
   display:none;
   position:absolute;
   background-color: #FFCB05;
   z-index:100;
-  border: 2px solid #333333;
-  border-radius: 9px;
-  -o-border-radius: 9px;
-  -icab-border-radius: 9px;
-  -khtml-border-radius: 9px;
-  -moz-border-radius: 9px;
-  -webkit-border-radius: 9px;
+  border: 1px solid #cccccc;
+  border-radius: 6px;
   font-size: 0.8em;
   padding: 5px;
 }
