update header update nodelist fix css

--- a/css/design.css
+++ b/css/design.css
@@ -240,6 +240,10 @@ a {
   font-size: 1em;
 }
 
+#header .firstlink {
+  margin-left: 0px;
+}
+
 #footer {
   border-left: 1px solid #ccc ;
   border-right: 1px solid #333333 ;
