--- a/css/ffhtopo.css
+++ b/css/ffhtopo.css
@@ -57,7 +57,7 @@
 		font-weight: bold;
 		padding: 5px;
 		background-color: #FFCB05;
-		color: #ffffff;
+		color: #666666;
 		margin-left: 5px;
 		margin-bottom: 5px;
 		border: 1px solid #cccccc;	
